--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,4 @@
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-}
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
